LightAPI: bukkit-common: fix build
Change-Id: Ib1afe6e70bed40a08b546bc26d887848e42f653d